# LIFT_platform

./: .gitignore  .gitmodules  .pylintrc  README.md
Folder to upload/: py_optitrack_client_node.py
Folder to upload/LIFT_platform/: README.md
Folder to upload/LIFT_platform/arduino/: BARC_NANO_BLE.ino
Folder to upload/LIFT_platform/experimental/: gps_dashboard.py  joystick.py  motor_test.py
Folder to upload/LIFT_platform/python/: setup.py
Folder to upload/LIFT_platform/python/onr_luci/: dataset_preview.ipynb  pytypes.py
Folder to upload/LIFT_platform/ros2_ws/src/luci_msgs/: CMakeLists.txt  package.xml
Folder to upload/LIFT_platform/ros2_ws/src/luci_msgs/msg/: BodyAngularVelocity.msg  BodyLinearVelocity.msg  GPSFix.msg  MotorCommand.msg  MotorReadout.msg  MotorStatus.msg  OrientationQuaternion.msg  PoseVel.msg  Position.msg  UTMOrigin.msg  VehicleActuation.msg  VehicleState.msg
LIFT_platform-optitrack_test/arduino/: BARC_NANO_BLE.ino
LIFT_platform-optitrack_test/experimental/: gps_dashboard.py  joystick.py  motor_test.py
LIFT_platform-optitrack_test/python/: setup.py
LIFT_platform-optitrack_test/python/onr_luci/: dataset_preview.ipynb  pytypes.py
LIFT_platform-optitrack_test/python/onr_luci/geo/: utm.py
LIFT_platform-optitrack_test/python/onr_luci/hardware/: d435.py  dbw_interface.py  motor_interface.py  ntrip_client.py  ublox_gps.py
LIFT_platform-optitrack_test/python/onr_luci/utils/: rosbag_api.py
LIFT_platform-optitrack_test/ros2_ws/src/luci_core/: CMakeLists.txt  package.xml
LIFT_platform-optitrack_test/ros2_ws/src/luci_core/config/: memorial_glade_geo_config.yaml  rfs_geo_config.yaml  test_config.yaml
LIFT_platform-optitrack_test/ros2_ws/src/luci_core/launch/: dbw.launch.py  gps_only.launch.py  test_node.launch.py
LIFT_platform-optitrack_test/ros2_ws/src/luci_core/lib/: base_node.py  launch_utils.py
LIFT_platform-optitrack_test/ros2_ws/src/luci_core/src/: arduino_node.py  dbw_node.py  gps.py  joystick_node.py  py_optitrack_pass_through_estimator_node.py  test_node.py
(+47 files in other folders)
